Feature com erro de não autorizado para puz=xar dados.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.51.11",
+    "add": "^2.0.6",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -28,8 +29,11 @@
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.52.1",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.25.1",
     "recharts": "^2.12.7",
+    "shadcn-ui": "^0.9.1",
+    "skeleton": "^0.1.2",
     "sonner": "^1.5.0",
     "sort-by": "^1.2.0",
     "tailwind-merge": "^2.4.0",
